Always show toolbar (to prevent jumping width.

--- a/brechtbaekelandt/wwwroot/css/site.css
+++ b/brechtbaekelandt/wwwroot/css/site.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 body {
@@ -70,11 +71,10 @@ header {
 
 #main {
     background-color: #fff;
-    margin-top: -100px;
+    margin-top: -80px;
     -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
-    padding-top: 20px;
 }
 
 
